[gd_scene load_steps=12 format=3 uid="uid://djk0mve68ule0"]

[ext_resource type="Script" path="res://ui/hud/balance_meter/balance_meter.gd" id="1_idesm"]
[ext_resource type="Texture2D" uid="uid://5rn6421vhod" path="res://assets/textures/ui/button_rectangle_border.png" id="2_d386j"]
[ext_resource type="Texture2D" uid="uid://ctjjlvwmp0xvk" path="res://assets/textures/ui/arrow_decorative_s_small.png" id="3_37kmv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_juqke"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a64el"]
texture = ExtResource("2_d386j")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Gradient" id="Gradient_bjprm"]
offsets = PackedFloat32Array(0, 0.493506, 1)
colors = PackedColorArray(1, 0, 0, 1, 0, 0.588235, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_s6puv"]
gradient = SubResource("Gradient_bjprm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dfo10"]
texture = SubResource("GradientTexture1D_s6puv")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_61wpc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pg0nd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c232r"]

[node name="balance_meter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_idesm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -122.0
offset_right = 200.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_juqke")

[node name="ProgressBar" type="ProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 17.0
offset_right = -12.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxTexture_a64el")
theme_override_styles/fill = SubResource("StyleBoxTexture_dfo10")
value = 100.0
show_percentage = false

[node name="BalanceGrabber" type="HSlider" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("3_37kmv")
theme_override_icons/grabber_highlight = ExtResource("3_37kmv")
theme_override_icons/grabber_disabled = ExtResource("3_37kmv")
theme_override_styles/slider = SubResource("StyleBoxEmpty_61wpc")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_pg0nd")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_c232r")
min_value = -1.0
max_value = 1.0
step = 0.001
editable = false
scrollable = false

[node name="RateTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="timeout" from="RateTimer" to="." method="_on_rate_timer_timeout"]
